--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,24 @@
 name: sweet_captcha
 description: Sweet Captcha Project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.3 <3.0.0'
+  sdk: ">=2.19.3 <3.0.0"
 dependencies:
+  bloc: ^8.1.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.2
+  freezed_annotation: ^2.2.0
   rive: ^0.10.3
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.2
 
 flutter:
   uses-material-design: true
