--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  font_awesome_flutter: ^10.4.0
   freezed_annotation: ^2.2.0
   rive: ^0.10.3
 
